# ChessBot

./: .gitignore  README.md
ROS2/src/board_manager/: package.xml  setup.cfg  setup.py
ROS2/src/board_manager/board_manager/: board_manager_service.py  chess_gui.py  dummy_motion_planner.py
ROS2/src/board_manager/config/: board_custom.yaml  board_full.yaml  piece_heights.yaml
ROS2/src/board_manager/srv/: ChessMove.srv
ROS2/src/chess_move_srv/: CMakeLists.txt  package.xml
ROS2/src/chess_move_srv/srv/: ChessMove.srv
ROS2/src/chessbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ROS2/src/chessbot_moveit_config/config/: LBR3R760iisy.ros2_control.xacro  LBR3R760iisy.srdf  LBR3R760iisy.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ROS2/src/chessbot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ROS2/src/controller/: CMakeLists.txt  README.md  chessbot.xml  package.xml  trajectory.sh
ROS2/src/controller/bringup/config/: LBR3R760iisy_controller.yaml
ROS2/src/controller/bringup/launch/: lbr3r760iisy_controller.launch.py
ROS2/src/controller/controller/: gripper_controller.cpp
ROS2/src/controller/controller/include/chessbot/: gripper_controller.hpp
ROS2/src/controller/description/launch/: view_robot.launch.py
ROS2/src/controller/description/urdf/: LBR3R760iisy.srdf  LBR3R760iisy.urdf  lbr_iisy3_r760_arm.srdf.xacro  lbr_iisy_arm.macro.xacro  view_robot.rviz
ROS2/src/controller/hardware/: RobotController.cpp  ZMQClient.cpp  lbr3r760iisy_hardware.cpp  simulator_control.pb.cc
ROS2/src/controller/hardware/include/chessbot/: RobotController.hpp  ZMQClient.hpp  lbr3r760iisy_hardware.hpp  simulator_control.pb.h
ROS2/src/motion_planner/: CMakeLists.txt  README.md  package.xml
ROS2/src/motion_planner/config/: moveit_controllers
ROS2/src/motion_planner/include/: moveit_example.hpp
ROS2/src/motion_planner/launch/: moveit_chess_bot.launch.py
ROS2/src/motion_planner/src/: MoveitChessBot.cpp
Webots/: webots_launch.py
Webots/controller_and_interface/: robot_controller.py
Webots/resource/LBR3R760iisy/: LBR3R760iisy.urdf  LBR3R760iisy_no_gripper.urdf
Webots/worlds/: default.wbt
dependencies/: install_apt_dependencies.sh  pip_requirements.txt
sim-ros/: README.md  simulator_control.proto
sim-ros/cpp/: simulator_control.pb.cc
sim-ros/python/: simulator_control_pb2.py
