<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>board_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="katica.bozso@gmail.com">kajc10</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend> <!-- Standard ROS message types -->

  <exec_depend>python3-flask</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Build and export the service files -->
  <build_depend>rosidl_default_generators</build_depend> <!-- Necessary for generating custom message or service types -->
  <exec_depend>rosidl_default_runtime</exec_depend> <!-- Necessary for running the services -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
